--- a/public/style.css
+++ b/public/style.css
@@ -596,6 +596,10 @@ video {
   bottom: 0.25rem;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .left-5 {
   left: 1.25rem;
 }
@@ -696,6 +700,10 @@ video {
 
 .mt-20 {
   margin-top: 5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -840,6 +848,11 @@ video {
 
 .border-collapse {
   border-collapse: collapse;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-x-1\/3 {
@@ -991,11 +1004,6 @@ video {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
 .border-paxlar {
   --tw-border-opacity: 1;
   border-color: rgb(255 155 26 / var(--tw-border-opacity));
@@ -1004,6 +1012,10 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-banner {
+  background-color: rgba(0,0,0,0.2);
 }
 
 .bg-black {
@@ -1019,6 +1031,16 @@ video {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
+
+.bg-lime-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 252 203 / var(--tw-bg-opacity));
 }
 
 .bg-orangeRed {
@@ -1048,12 +1070,20 @@ video {
   background-image: url('./images/contact_bg.jpg');
 }
 
-.bg-\[url\(\.\/images\/Banner_bg\.jpg\)\] {
-  background-image: url(./images/Banner_bg.jpg);
+.bg-\[url\(\.\/images\/hero-1\.jpg\)\] {
+  background-image: url(./images/hero-1.jpg);
+}
+
+.bg-\[url\(\.\/images\/hero-2\.jpg\)\] {
+  background-image: url(./images/hero-2.jpg);
 }
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-fixed {
+  background-attachment: fixed;
 }
 
 .bg-center {
@@ -1071,6 +1101,10 @@ video {
 
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-14 {
+  padding: 3.5rem;
 }
 
 .p-2 {
@@ -1099,11 +1133,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1124,6 +1153,11 @@ video {
   padding-bottom: 3.5rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1139,12 +1173,9 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-5 {
@@ -1218,8 +1249,8 @@ video {
   text-transform: uppercase;
 }
 
-.leading-4 {
-  line-height: 1rem;
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .leading-none {
@@ -1281,15 +1312,54 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
+.duration-200 {
+  transition-duration: 200ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
+}
+
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Nunito', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Raleway', sans-serif; */
 
 .container {
   margin: auto;
@@ -1304,6 +1374,10 @@ video {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   text-transform: uppercase;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .after {
@@ -1314,23 +1388,25 @@ video {
   position: absolute;
   bottom: -0.625rem;
   left: 0px;
-  display: none;
   height: 0.125rem;
   width: 100%;
-  content: var(--tw-content);
+  transform-origin: right;
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
-}
-
-.after:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 0;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  content: var(--tw-content);
+  transition-duration: 500ms;
 }
 
 .after:hover::after {
+  --tw-scale-x: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   content: var(--tw-content);
-  display: block;
+  opacity: 1;
 }
 
 .heading {
@@ -1342,9 +1418,9 @@ video {
 
 .heading-h1 {
   margin-bottom: 1.75rem;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 600;
+  font-family: 'Italianno', cursive;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
   text-transform: uppercase;
 }
 
@@ -1360,7 +1436,7 @@ video {
 .heading-p {
   margin-bottom: 1.25rem;
   font-size: 0.875rem;
-  line-height: 1rem;
+  line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
@@ -1444,6 +1520,20 @@ video {
   }
 }
 
+.scrollNav {
+  position: sticky;
+  top: 0px;
+  z-index: 50;
+  border-bottom-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 155 26 / var(--tw-border-opacity));
+  padding-top: 0px;
+  padding-bottom: 0px;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 @media (min-width: 1280px) {
   .xl\:container {
     width: 100%;
@@ -1478,6 +1568,46 @@ video {
       max-width: 1536px;
     }
   }
+}
+
+.selection\:bg-black *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-black *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.selection\:text-white *::-moz-selection {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.selection\:text-white *::selection {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.selection\:bg-black::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-black::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.selection\:text-white::-moz-selection {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.selection\:text-white::selection {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .placeholder\:text-xs::-moz-placeholder {
@@ -1518,6 +1648,20 @@ video {
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
 
+.hover\:-translate-y-2:hover {
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:border:hover {
+  border-width: 1px;
+}
+
+.hover\:border-gray-300:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .hover\:border-paxlar:hover {
   --tw-border-opacity: 1;
   border-color: rgb(255 155 26 / var(--tw-border-opacity));
@@ -1541,9 +1685,39 @@ video {
   background-image: linear-gradient(to top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('./images/bitcoin.png');
 }
 
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-100:hover {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:bg-paxlarLight:focus {
+  background-color: rgba(255, 156, 26,0.4);
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .group:hover .group-hover\:text-gray-300 {
@@ -1590,8 +1764,8 @@ video {
     height: 76vh;
   }
 
-  .md\:w-3\/5 {
-    width: 60%;
+  .md\:w-4\/5 {
+    width: 80%;
   }
 
   .md\:grid-cols-2 {
@@ -1645,8 +1819,8 @@ video {
     top: 0px;
   }
 
-  .lg\:top-1\/2 {
-    top: 50%;
+  .lg\:top-1\/3 {
+    top: 33.333333%;
   }
 
   .lg\:order-first {
@@ -1663,6 +1837,90 @@ video {
 
   .lg\:w-10\/12 {
     width: 83.333333%;
+  }
+
+  @keyframes drop {
+    0%, 100% {
+      transform: translateY(-5px);
+    }
+
+    50% {
+      transform: translateY(5px);
+    }
+  }
+
+  .lg\:animate-\[drop_1500ms_ease-in-out_1000ms_infinite\] {
+    animation: drop 1500ms ease-in-out 1000ms infinite;
+  }
+
+  @keyframes drop {
+    0%, 100% {
+      transform: translateY(-5px);
+    }
+
+    50% {
+      transform: translateY(5px);
+    }
+  }
+
+  .lg\:animate-\[drop_1500ms_ease-in-out_1200ms_infinite\] {
+    animation: drop 1500ms ease-in-out 1200ms infinite;
+  }
+
+  @keyframes drop {
+    0%, 100% {
+      transform: translateY(-5px);
+    }
+
+    50% {
+      transform: translateY(5px);
+    }
+  }
+
+  .lg\:animate-\[drop_1500ms_ease-in-out_200ms_infinite\] {
+    animation: drop 1500ms ease-in-out 200ms infinite;
+  }
+
+  @keyframes drop {
+    0%, 100% {
+      transform: translateY(-5px);
+    }
+
+    50% {
+      transform: translateY(5px);
+    }
+  }
+
+  .lg\:animate-\[drop_1500ms_ease-in-out_400ms_infinite\] {
+    animation: drop 1500ms ease-in-out 400ms infinite;
+  }
+
+  @keyframes drop {
+    0%, 100% {
+      transform: translateY(-5px);
+    }
+
+    50% {
+      transform: translateY(5px);
+    }
+  }
+
+  .lg\:animate-\[drop_1500ms_ease-in-out_600ms_infinite\] {
+    animation: drop 1500ms ease-in-out 600ms infinite;
+  }
+
+  @keyframes drop {
+    0%, 100% {
+      transform: translateY(-5px);
+    }
+
+    50% {
+      transform: translateY(5px);
+    }
+  }
+
+  .lg\:animate-\[drop_1500ms_ease-in-out_800ms_infinite\] {
+    animation: drop 1500ms ease-in-out 800ms infinite;
   }
 
   .lg\:grid-cols-3 {
@@ -1702,5 +1960,9 @@ video {
 
   .xl\:gap-0 {
     gap: 0px;
+  }
+
+  .xl\:bg-transparent {
+    background-color: transparent;
   }
 }
