--- a/src/style.css
+++ b/src/style.css
@@ -2,32 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,400&family=Raleway:wght@200;300;400;500;600;700;800&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Italianno&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,400&family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap');
+  
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,400&family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap');
-
-
+/* font-family: 'Montserrat', sans-serif;
+font-family: 'Nunito', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Raleway', sans-serif; */
 .container{
   @apply w-90 m-auto;
 }
 
 .btn{
-  @apply py-3 px-3 uppercase border rounded-2xl;
+  @apply py-3 px-3 uppercase border rounded-2xl transition-all duration-300 ease-in;
 }
 .after{
-  @apply relative hover:scale-125 after:absolute after:-bottom-2.5 after:w-full after:h-0.5 after:bg-yellow-500 after:left-0 after:hidden after:hover:block;
+  @apply relative after:absolute after:-bottom-2.5 after:w-full after:transition-all after:duration-500 after:h-0.5 after:bg-yellow-500 after:left-0 after:scale-x-0 after:opacity-0 after:hover:scale-x-100 after:origin-right after:hover:opacity-100;
 }
 .heading{
   @apply text-center w-2/5 m-auto mb-28;
 }
 .heading-h1{
-  @apply text-2xl font-semibold uppercase mb-7;
+  @apply text-3xl uppercase mb-7 font-italiano;
 }
 .heading-span{
   @apply w-14 h-0.5 bg-paxlar block m-auto;
 }
 .heading-p{
-  @apply leading-4 text-gray-500 text-sm mb-5;
+  @apply leading-5 text-gray-500 text-sm mb-5;
 }
 
 .rotated-span{
@@ -49,4 +51,8 @@
 }
 .toph-span{
   @apply block bg-paxlar w-12 h-px mx-auto md:mx-0;
+}
+
+.scrollNav{
+  @apply sticky top-0 shadow-lg z-50 py-0 border-b-2 border-paxlar;
 }
